--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ path = "src/lib.rs"
 
 [dependencies]
 cxx = "1.0"
+ffmpeg-sys-next = "7.1.0"
 
 [build-dependencies]
 cc = "1.1.31"
 cxx-build = "1.0"
+ffmpeg-sys-next = "7.1.0"
